--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,10 @@
               "src/assets"
             ],
            "styles": [
-               "src/styles.css",
-               "node_modules/bootstrap/dist/css/bootstrap.min.css"
-            ],
+            "@angular/material/prebuilt-themes/azure-blue.css",
+            "src/styles.css",
+            "node_modules/bootstrap/dist/css/bootstrap.min.css"
+          ],
             "scripts": []
           },
           "configurations": {
@@ -80,9 +81,10 @@
               "src/assets"
             ],
            "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
-            ],
+            "@angular/material/prebuilt-themes/azure-blue.css",
+            "src/styles.css",
+            "node_modules/bootstrap/dist/css/bootstrap.min.css"
+          ],
             "scripts": []
           }
         }
