--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,9 @@
             "assets": [
               "src/assets"
             ],
-           "styles": [
-               "src/styles.css",
-               "node_modules/bootstrap/dist/css/bootstrap.min.css"
+            "styles": [
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -43,7 +43,8 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "baseHref": "/my-portfolio/"
             },
             "development": {
               "optimization": false,
@@ -79,7 +80,7 @@
             "assets": [
               "src/assets"
             ],
-           "styles": [
+            "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
