--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,10 @@ jobs:
           node-version: 18
 
       - name: Install Dependencies
-        run: npm ci  # Faster than 'npm install'
+        run: npm ci
+
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli
 
       - name: Build Angular Project
         run: ng build --configuration=production
@@ -29,4 +32,3 @@ jobs:
         with:
           branch: gh-pages
           folder: dist/my-portfolio
-          
