--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           name: angular-build
           path: dist/my-portfolio
+          retention-days: 1
 
   deploy:
     runs-on: ubuntu-latest
