--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/my-portfolio",
+            "outputPath": "dist/my-portfolio/browser",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -23,12 +23,14 @@
             "assets": [
               "src/assets"
             ],
-           "styles": [
-            "@angular/material/prebuilt-themes/azure-blue.css",
-            "src/styles.css",
-            "node_modules/bootstrap/dist/css/bootstrap.min.css"
-          ],
-            "scripts": []
+            "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+            ],
+            "scripts": [],
+            "baseHref": "/my-portfolio/",
+            "deployUrl": "/my-portfolio/"
           },
           "configurations": {
             "production": {
@@ -44,7 +46,9 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "baseHref": "/my-portfolio/",
+              "deployUrl": "/my-portfolio/"
             },
             "development": {
               "optimization": false,
@@ -80,11 +84,11 @@
             "assets": [
               "src/assets"
             ],
-           "styles": [
-            "@angular/material/prebuilt-themes/azure-blue.css",
-            "src/styles.css",
-            "node_modules/bootstrap/dist/css/bootstrap.min.css"
-          ],
+            "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+            ],
             "scripts": []
           }
         }
