--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@types/jasmine": "^4.3.5",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
